# taskoverlord

./: .gitignore  .prettierignore  .prettierrc  Justfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
backend/: Cargo.toml
backend/crates/taskoverlord-subprocess/: Cargo.toml
backend/crates/taskoverlord-subprocess/src/: lib.rs
backend/crates/taskoverlord-taskwarrior/: Cargo.toml
backend/crates/taskoverlord-taskwarrior/src/: lib.rs
backend/crates/taskoverlord-tauri/: Cargo.toml  tauri.conf.json
backend/crates/taskoverlord-tauri/src/: commands.rs  error.rs  main.rs  shell.rs  taskwarrior.rs
frontend/: .prettierignore  package.json  tailwind.config.js  tsconfig.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/@types/: react-pluralize.d.ts
frontend/src/components/custom/: empty-state.tsx  group.tsx
frontend/src/contexts/: global-state.tsx
frontend/src/lib/: ipc.ts  ipc.tsx  utils.ts
frontend/src/routes/: __root.tsx  index.lazy.tsx  next.lazy.tsx  search.lazy.tsx
src/: App.jsx  index.css  main.tsx  routeTree.gen.ts  styles.css  utils.js  utils.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  shell.rs  taskwarrior.rs
src/components/: utils.tsx
src/components/atoms/: Anchor.jsx  Badge.jsx  Button.jsx  CloseButton.jsx  FormGroup.jsx  HSeparator.jsx  HelpText.jsx  IconLabel.jsx  Input.jsx  Label.jsx  Shortcut.jsx  Spinner.jsx  TextArea.jsx  Timer.jsx
src/components/custom/: action-bar.tsx  button-utils.tsx  empty-state.tsx  flex-line.tsx  group.tsx  typography.tsx
src/components/features/: action-bar.tsx  calendar-stripe.tsx  task-list.tsx
src/components/layout/: auxiliary-bar.tsx  calendar-stripe.tsx  layout.tsx  main-content.tsx  navbar.tsx  primary-content.tsx  timeline.tsx  workbench.tsx
src/components/molecules/: Card.jsx  Checkbox.jsx  DropdownCard.jsx  EmptyState.jsx  FlexLine.jsx  Heading2.jsx  Heading3.jsx  Modal.jsx  RightFloatingColumn.jsx  SelectMenu.jsx  Toast.jsx
src/components/organisms/: BottomBar.jsx  DataTable.jsx  FilterDropdownCard.jsx  FilterDropdownCardForm.jsx  FloatingTerminal.jsx  HeaderBar.jsx  NavigationTabs.jsx  NewTask.jsx  SpashScreen.jsx  Tabs.jsx  TaskDetails.jsx  TasksTable.jsx  Terminal.jsx
src/components/templates/: FlexLine.jsx
src/components/ui/: button.tsx  card.tsx  date-picker.tsx  dropdown-menu.tsx  empty-state.tsx  input.tsx  label.tsx  scroll-area.tsx  tabs.tsx
src/components/utils/: badge-utils.tsx  button-utils.tsx  form-utils.tsx  icon-utils.tsx  tooltip-utils.tsx
src/contexts/: ToastContext.jsx  ToastProvider.jsx  global-context.tsx  global-state.tsx
src/forms/: TaskForm.jsx
src/lib/: ipc.tsx  math.ts  utils.ts
src/lib/types/: task.ts
src/routes/: RootRoute.jsx  TableViewRoute.jsx  __root.jsx  __root.tsx  calendar.lazy.tsx  completed.lazy.tsx  create-tasks.tsx  favorite.tsx  favorites.tsx  gantt-diagram.lazy.tsx  index.lazy.jsx  index.lazy.tsx  kanban-board.lazy.tsx  next.lazy.tsx  projects.lazy.tsx  search.lazy.tsx  settings.lazy.tsx  table-view.lazy.tsx  tags.lazy.tsx
src/types/: task.ts
(+23 files in other folders)
